--- a/Front-HTML/adding-words.html
+++ b/Front-HTML/adding-words.html
@@ -141,7 +141,7 @@
                                                         required style="margin-left:20px;  width:248px; font-family:'HelveticaNeue';font-size:14px;">
                                                 </div>
                                             </div>
-                                            <p class="help is-danger " style="font-size:10px; font-family:'HelveticaNeue';margin-top:2rem; margin-left:4rem;" >დაფიქსირდა შეცდომა, თავიდან სცადეთ
+                                            <p class="help is-danger error-message" style="font-size:10px; font-family:'HelveticaNeue';margin-top:2rem; margin-left:4rem;" >დაფიქსირდა შეცდომა, თავიდან სცადეთ
                                             </p>
                                             
                                             <div class="field is-grouped is-grouped-centered pt-5">
