adding-words, user-info update

--- a/Front-HTML/user-info.html
+++ b/Front-HTML/user-info.html
@@ -125,6 +125,11 @@
             <div>
                 <img src="./img/main-page/yellow-ladybird.svg" alt="ladybird" class="user-ladybird" style="position:absolute; left:17.5rem;top:1.5rem;z-index:30">
             </div>
+            <div>
+                <a href="./editing-word.html">
+                    <img src="./img/edit-mark.svg" alt="edit" class="user-edit">
+                </a>
+            </div>
             <div class="columns is-mobile is-centered">
                 <div class="column is-7-widescreen is-7-desktop is-8-tablet is-12-mobile is-relative">
                     <div class="card mt-5">
